hide some songs

--- a/songbook.tex
+++ b/songbook.tex
@@ -255,7 +255,7 @@ co mě čeká\\*
 a nemine.
 
 \end{poem}
-
+\iffalse
 \begin{poem}{Až to se mnú sekne}{Jaromír Nohavica}
 
 \settowidth{\versewidth}{s Lojzu chodili sme do Orlove na zakladni školu}
@@ -302,7 +302,8 @@ na ná na ná ná na na na ná na\\*
 na ná ná na ná na ná na ná
 
 \end{poem}
-
+\fi
+\iffalse
 \begin{poem}{Banánová šťáva}{Timudej}
 
 \settowidth{\versewidth}{A tak si jede ten děda po mostě s valachem a sudy má za sebou.}
@@ -339,7 +340,7 @@ Olé olé olé olé a někdo tady je a kdo to asi je?\\*
 Olé olé olé policie!
 
 \end{poem}
-
+\fi
 \begin{poem}{Batalion}{Spirituál kvintet}
 
 \settowidth{\versewidth}{Víno na kuráž a k ránu dvě hodinky spánku,}
@@ -647,7 +648,7 @@ Bude mi lehká zem.\\*
 Bude mi lehká zem.
 
 \end{poem}
-
+\iffalse
 \begin{poem}{Colorado}{Kabát}
 
 \settowidth{\versewidth}{Já radši utratil jsem psa a všechny prachy}
@@ -684,7 +685,7 @@ Ref.
 Ref.
 
 \end{poem}
-
+\fi
 \begin{poem}{Dej mi víc své lásky}{Olympic}
 
 \settowidth{\versewidth}{Vymyslel jsem spoustu nápadu, aúú,}
@@ -1048,7 +1049,7 @@ nemyslet na návrat.:/\\*
 to bych rád.:/
 
 \end{poem}
-
+\iffalse
 \begin{poem}{Jesse James}{Greenhorns}
 
 \settowidth{\versewidth}{Běželi běželi bez uzdy a sedla}
@@ -1096,7 +1097,7 @@ ten vám Jesse zradí,\\*
 já vím tenkrát v noci prásk ho sám.
 
 \end{poem}
-
+\fi
 \begin{poem}{Jižní kříž}{Jan Nedvěd}
 
 \settowidth{\versewidth}{světem protloukal ses, jak ten život pádí,}
@@ -1746,7 +1747,7 @@ a náhoda je,\\*
 štěstí od podkovy...
 
 \end{poem}
-
+\iffalse
 \begin{poem}{Není nutno}{Jaroslav Uhlíř, Zdeněk Svěrák}
 
 \settowidth{\versewidth}{Chceš-li, trap se, že ti v kapse}
@@ -1777,7 +1778,8 @@ hlavně nesmí býti smutno,\\*
 natož aby se brečelo.
 
 \end{poem}
-
+\fi
+\iffalse
 \begin{poem}{Nikdy nic nebylo}{Sto zvířat}
 
 \settowidth{\versewidth}{Člověk ze zoufalství snadno pomate se}
@@ -1840,7 +1842,7 @@ co nikdo nenatočil
 Ref.
 
 \end{poem}
-
+\fi
 \begin{poem}{Obluda}{Hop Trop}
 
 \settowidth{\versewidth}{křik' plavčík na stožáru, a hlásek se mu třás'}
@@ -3168,7 +3170,7 @@ Hallelujah, Hallelujah,\\*
 Hallelujah, Hallelujah.
 
 \end{poem}
-
+\iffalse
 \begin{poem}{Homophobia}{Chumbawamba}
 
 \settowidth{\versewidth}{You can't love who you want to love in times like these}
@@ -3199,7 +3201,7 @@ Ref.
 Ref.
 
 \end{poem}
-
+\fi
 \begin{poem}{I Walk the Line}{Johnny Cash}
 
 \settowidth{\versewidth}{And happiness I've known proves that it's right}
@@ -3229,7 +3231,7 @@ I keep my eyes wide open all the time\\*
 I keep the ends out for the tie that bind.
 
 \end{poem}
-
+\iffalse
 \begin{poem}{Jack of Hands}{Edward Ka-Spel}
 
 \settowidth{\versewidth}{He’s free to tread and lift the sheets}
@@ -3291,7 +3293,8 @@ He’ll be home at last
 Still I don’t believe in angels
 
 \end{poem}
-
+\fi
+\iffalse
 \begin{poem}{Leeds United}{Amanda Palmerová}
 
 \settowidth{\versewidth}{He’s free to tread and lift the sheets}
@@ -3379,7 +3382,8 @@ Uh uh uh uh oh oh oh oh oh uh oh\\*
 Someday, someday, someday, someday, someday, \mbox{someday}
 
 \end{poem}
-
+\fi
+\iffalse
 \begin{poem}{Old Maui}{lidová}
 
 \settowidth{\versewidth}{Cause we're homeward bound from the Arctic ground}
@@ -3446,7 +3450,8 @@ We're homeward bound from the Arctic ground\\*
 Rolling down to Old Maui
 
 \end{poem}
-
+\fi
+\iffalse
 \begin{poem}{Over the Rainbow}{Judy Garland}
 
 \settowidth{\versewidth}{Wake up where the clouds are far behind me}
@@ -3473,7 +3478,8 @@ And the dreams that you dare to\\*
 Oh why, oh why can't I?
 
 \end{poem}
-
+\fi
+\iffalse
 \begin{poem}{Rats Rule}{Die Antwoord}
 
 \settowidth{\versewidth}{Soon, there could be a couple billion, how will you make us go away?}
@@ -3555,7 +3561,7 @@ In the end, the rats shall rule.\\*
 \textit{Yeah, rats rule, motherfucker.}
 
 \end{poem}
-
+\fi
 \begin{poem}{Ring of Fire}{Johnny Cash}
 
 \settowidth{\versewidth}{I fell into a burnin' ring of fire}
@@ -3662,6 +3668,7 @@ Ref.
 
 \end{poem}
 \fi
+\iffalse
 \begin{poem}{Roll the Woodpile Down}{lidová}
 
 \settowidth{\versewidth}{Rollin', rollin', rollin' the whole world 'round}
@@ -3714,7 +3721,7 @@ That brown gal of mine's on the Georgia line\\*
 And we'll roll the woodpile down
 
 \end{poem}
-
+\fi
 \begin{poem}{The Times They Are A-Changin'}{Bob Dylan}
 
 \settowidth{\versewidth}{Please get outta' the new one if you can’t lend your hand}
@@ -3782,18 +3789,20 @@ The boys all go to hell and then the Cubans hit the floor\\*
 They drive along the pipeline, they tango 'til they're sore\\*
 They take apart their nightmares and they leave them by the door
 
+Ref.:\\*
 Let me fall out of the window with confetti in my hair\\*
 Deal out Jacks or Better on a blanket by the stairs\\*
 I'll tell you all my secrets, but I lie about my past\\*
 And send me off to bed for evermore
 
-Ref.:\\*
 Make sure they play my theme song I guess daisies will have to do\\*
 Just get me to New Orleans and paint shadows on the pews\\*
 Turn the spit on that pig and kick the drum and let me down\\*
 Put my clarinet beneath your bed 'til I get back in town
 
 Ref.
+
+\vfill\eject
 
 Just make sure she's all in calico and the color of a doll\\*
 Wave the flag on Cadillac day, and a skillet on the wall\\*
@@ -3805,7 +3814,7 @@ Ref.
 Ref.
 
 \end{poem}
-
+\iffalse
 \begin{poem}{Toxicity}{System of a Down}
 
 \settowidth{\versewidth}{Flashlight reveries caught in the headlights of a truck}
@@ -3838,7 +3847,7 @@ When I became the sun\\*
 I shone life into the man's hearts
 
 \end{poem}
-
+\fi
 \section{Italské}
 
 Itálie je nevyspělou zemí divokých Italů. Nachází se v jižní Evropě a je
