--- a/songbook.tex
+++ b/songbook.tex
@@ -76,6 +76,22 @@ Kajetán Pterodaktyl.
 % Start numbering pages with normal arabic numerals.
 % \mainmatter
 
+\begin{poem}{Hobit aneb Cesta tam a zase zpátky}{Hurá do přírody}
+
+\settowidth{\versewidth}{Měl zkázu nést a spálit vřes.}
+
+Srdce nás tam k hoře povede,\\*
+tam do hlubin, kde poklad je.\\*
+Se soumrakem už vstává den,\\*
+kdy zlato své zas najdeme.
+
+Plášť v borovicích sténá dál,\\*
+a vítr skučí v zádech žal.\\*
+Měl zkázu nést a spálit vřes.\\*
+Les pochodněmi větví vlál.
+
+\end{poem}
+
 \begin{poem}{Za pokladem Černé perly}{Hurá do přírody}
 
 \settowidth{\versewidth}{"Hodokvas vítězný - hřeš, jak jen chceš."}
