comment songs that Michal cannot play

--- a/songbook.tex
+++ b/songbook.tex
@@ -561,6 +561,7 @@ a taky mi říkala:"Nehraj si s tou pistolkou!"
 
 \end{poem}
 
+\iffalse
 \begin{poem}{Blues hvízdavého vlaku}{Greenhorns}
 
 \settowidth{\versewidth}{za pět minut má vyjet můj vlak,}
@@ -597,6 +598,7 @@ musím vyjet přece,\\*
 zelenej mám semafor.
 
 \end{poem}
+\fi
 
 \begin{poem}{Bude mi lehká zem}{Petr Hapka, Jana Kirschner}
 
@@ -867,6 +869,7 @@ pam padadadam padadadádam
 
 \end{poem}
 
+\iffalse
 \begin{poem}{Hoja hoj}{Karel Svoboda}
 
 \settowidth{\versewidth}{zvol si nejlepší ze všech řemesel,}
@@ -896,6 +899,7 @@ Ref.
 Ref.
 
 \end{poem}
+\fi
 
 \begin{poem}{Houby}{Garáž}
 
@@ -1065,6 +1069,7 @@ nemyslet na návrat.:/\\*
 to bych rád.:/
 
 \end{poem}
+
 \iffalse
 \begin{poem}{Jesse James}{Greenhorns}
 
@@ -1114,6 +1119,7 @@ já vím tenkrát v noci prásk ho sám.
 
 \end{poem}
 \fi
+
 \begin{poem}{Jižní kříž}{Jan Nedvěd}
 
 \settowidth{\versewidth}{světem protloukal ses, jak ten život pádí,}
@@ -1193,6 +1199,7 @@ no nic moc extra nebyla.
 
 \end{poem}
 
+\iffalse
 \begin{poem}{Když se zamiluje kůň}{Zdeněk Svěrák, Jaroslav Uhlíř}
 
 \settowidth{\versewidth}{láskou hlubokou jak tůň}
@@ -1260,6 +1267,7 @@ pro jeho klisničku,\\*
 nechte ho jít.
 
 \end{poem}
+\fi
 
 \begin{poem}{Kometa}{Jaromír Nohavica}
 
@@ -1443,6 +1451,7 @@ Ref.
 
 \end{poem}
 
+\iffalse
 \begin{poem}{Malování}{Divokej Bill}
 
 \settowidth{\versewidth}{jen táta a máma jsou s náma,}
@@ -1510,6 +1519,7 @@ jsou plný touhy\\*
 a lásky nás tří.
 
 \end{poem}
+\fi
 
 \begin{poem}{Maruška}{Malomocnost prázdnoty}
 
@@ -1592,6 +1602,7 @@ dobrá Anička.:/
 Mezi horami... 
 \end{poem}
 
+\iffalse
 \begin{poem}{Měsíc}{Mňága a Žďorp}
 
 \settowidth{\versewidth}{teďka svítí měsíc pro každýho zvlášť mně je to líto}
@@ -1620,6 +1631,7 @@ měsíc\\*
 svítí měsíc
 
 \end{poem}
+\fi
 
 \begin{poem}{Milenci v texaskách}{Josef Zíma, Karel Štědrý}
 
@@ -2066,6 +2078,7 @@ než měli poru\\*
 
 \end{poem}
 
+\iffalse
 \begin{poem}{Proklínám}{Janek Ledecký}
 
 \settowidth{\versewidth}{Sám s hlavou skloněnou, všechny lásky budou zdání.}
@@ -2096,6 +2109,7 @@ Sám a sám, ať nikdy úsvit nespatříš,\\*
 na ústa mříž, oči oslepnou, ať do smrti seš sám.
 
 \end{poem}
+\fi
 
 \begin{poem}{Proměny}{Čechomor}
 
@@ -2357,6 +2371,7 @@ Ref.
 
 \end{poem}
 
+\iffalse
 \begin{poem}{Traktor}{Visací zámek}
 
 \settowidth{\versewidth}{Sám s hlavou skloněnou, všechny lásky budou zdání.}
@@ -2409,6 +2424,7 @@ Jede do hor (jede do hor)\\*
 Vorat brambóóór!
 
 \end{poem}
+\fi
 
 \begin{poem}{Tři čuníci}{Jaromír Nohavica}
 
@@ -2538,6 +2554,7 @@ On hodlá dál žít na scestí.
 
 \end{poem}
 
+\iffalse
 \begin{poem}{Udavač z Těšína}{Jaroslav Hutka}
 
 \settowidth{\versewidth}{vtíravým hlasem svým bude nám zpívat}
@@ -2588,6 +2605,7 @@ Kritikou oceněn, anděly odměněn\\*
 bohatě co blíží se ke svému pádu
 
 \end{poem}
+\fi
 
 \begin{poem}{Vlak v 05}{Greenhorns}
 
@@ -2694,6 +2712,7 @@ Ref.
 
 \end{poem}
 
+\iffalse
 \begin{poem}{Zatracenej život}{Greenhorns}
 
 \settowidth{\versewidth}{než jsem jí stačil řict, že je hezká,}
@@ -2747,6 +2766,7 @@ udělal jsem přemet, jako tur řval,\\*
 do dáli jsem upaloval.
 
 \end{poem}
+\fi
 
 \begin{poem}{Zítra ráno v pět}{Jaromír Nohavica}
 
@@ -3796,6 +3816,7 @@ For the times they are a-changin'.
 
 \end{poem}
 
+\iffalse
 \begin{poem}{Tango Till They're Sore}{Tom Waits}
 
 \settowidth{\versewidth}{Make sure they play my theme song I guess daisies will have to do}
@@ -3830,6 +3851,8 @@ Ref.
 Ref.
 
 \end{poem}
+\fi
+
 \iffalse
 \begin{poem}{Toxicity}{System of a Down}
 
