--- a/songbook.tex
+++ b/songbook.tex
@@ -132,14 +132,14 @@ Rudá je krev, až budeme dřít.\\*
 Rudá je obloha, když odejde mrak,\\*
 rudá je dobrá, tvrdil to Marx.
 
-Rudý je uvnitř pečená kráva.\\*
-Rudá je prej i ve vesmíru tráva.\\*
+Rudej byl Lenin, ten starej frája,\\*
+rudá je prej i ve vesmíru tráva.\\*
 Rudá je louže, když šlápneš na sýčka,\\*
 potom je rudý i naše moře a říčka.
 
 Jako nálada, když zahrajou poslední kus,\\*
 rudej byl v plamenech prej i mistr Jan Hus,\\*
-je to barva, kterou, mám prostě rád,\\*
+je to planeta, kterou mám prostě rád,\\*
 rudá je dobrá, vždyť je to Mars.
 
 \end{poem}
@@ -444,7 +444,7 @@ Tichounce do pláče \\*
 Dneska už mi fóry ňák nejdou přes pysky,\\*
 stojím s dlouhou kravatou na bedně od whisky.\\*
 Stojím s dlouhým obojkem, jak stájovej pinč,\\*
-tu kravatu co nosím mi navlík soudce Lynč.
+tu kravatu, co nosím, mi navlík soudce Lynč.
 
 Tak kopni do tý bedny, ať panstvo nečeká,\\*
 jsou dlouhý schody do nebe a štreka daleká.\\*
@@ -463,7 +463,7 @@ tak kopni do tý bedny, ať na cestu se dám.
 
 Když jsem štípnul koně a ujel jen pár mil,\\*
 nechtěl běžet, dokavád se whisky nenapil,\\*
-zatracená smůla zlá, zatracenej pech,\\*
+zatracená smůla zlá a zatracenej pech,\\*
 když kůň cucá whisku jak u potoka mech.
 
 Tak kopni do tý bedny, ať panstvo nečeká,\\*
@@ -1928,6 +1928,45 @@ ach, ich, och, ach ...
 
 \end{poem}
 
+\begin{poem}{Osamělý město}{Jiří Suchý, Jiří Šlitr}
+
+\settowidth{\versewidth}{snad ke štěstí, snad do záhuby}
+
+Ten den, co vítr listí z města svál, \\*
+můj džíp se vracel, jako by se bál, \\*
+že asfaltový moře odliv má \\*
+a stáj že svýho koně nepozná. 
+
+Ref.:\\*
+Řekni, kolik je na světě, kolik je takovejch měst, \\*
+řekni, kdo by se vracel, všude je tisíce cest, \\*
+tenkrát, když jsi mi, Terezo, řekla, že ráda mě máš, \\*
+tenkrát ptal jsem se, Terezo, kolik mi polibků dáš,\\*
+naposled, naposled. 
+
+Já z dálky viděl město v slunci stát \\*
+a dál jsem se jen s hrůzou mohl ptát, \\*
+proč vítr mlátí spoustou okenic, \\*
+proč jsou v ulici auta, jinak nic?
+
+Ref.
+
+Do prázdnejch beden z otvíranejch aut \\*
+zaznívá odněkud něžný tón flaut \\*
+a v závěji starýho papíru \\*
+válej' se černý klapky z klavíru. 
+
+Ref.
+
+Tak bloudím tímhle strašným městem sám \\*
+a vím, že Terezu už nepotkám, \\*
+jen já tu zůstal s prázdnou ulicí\\* 
+a osamělý město mlčící. 
+
+Ref.
+
+\end{poem}
+
 \begin{poem}{Píseň zhrzeného trampa}{Jaromír Nohavica}
 
 \settowidth{\versewidth}{Že prý se můžu vrátit zpět až dám se do cajku}
@@ -2332,45 +2371,6 @@ na vlnách chtíče.
 
 \end{poem}
 
-\begin{poem}{Tereza}{Jiří Suchý, Jiří Šlitr}
-
-\settowidth{\versewidth}{snad ke štěstí, snad do záhuby}
-
-Ten den, co vítr listí z města svál, \\*
-můj džíp se vracel, jako by se bál, \\*
-že asfaltový moře odliv má \\*
-a stáj že svýho koně nepozná. 
-
-Ref.:\\*
-Řekni, kolik je na světě, kolik je takovejch měst, \\*
-řekni, kdo by se vracel, všude je tisíce cest, \\*
-tenkrát, když jsi mi, Terezo, řekla, že ráda mě máš, \\*
-tenkrát ptal jsem se, Terezo, kolik mi polibků dáš,\\*
-naposled, naposled. 
-
-Já z dálky viděl město v slunci stát \\*
-a dál jsem se jen s hrůzou mohl ptát, \\*
-proč vítr mlátí spoustou okenic, \\*
-proč jsou v ulici auta, jinak nic?
-
-Ref.
-
-Do prázdnejch beden z otvíranejch aut \\*
-zaznívá odněkud něžný tón flaut \\*
-a v závěji starýho papíru \\*
-válej' se černý klapky z klavíru. 
-
-Ref.
-
-Tak bloudím tímhle strašným městem sám \\*
-a vím, že Terezu už nepotkám, \\*
-jen já tu zůstal s prázdnou ulicí\\* 
-a osamělý město mlčící. 
-
-Ref.
-
-\end{poem}
-
 \iffalse
 \begin{poem}{Traktor}{Visací zámek}
 
@@ -2425,6 +2425,117 @@ Vorat brambóóór!
 
 \end{poem}
 \fi
+
+\begin{poem}{Titanic}{Tři sestry}
+
+\settowidth{\versewidth}{Slavný muž, jenž měl z pekla štěstí}
+
+Z výšin Velkých Karpat\\*
+Přes moře na západ.\\*
+Bída v Americe má cíl.\\*
+Ráno maj už lístek.\\*
+Titanic je místem,\\*
+Kde teď budou týdnů pár žít.
+
+Jen Ján zpitej zas jak Dán.\\*
+Prošvihnul odjezd parníku snů.\\*
+Máma ta pláče že sám\\*
+Odsoudil se skrz pitku\\*
+Ke smutnému zítřku svých dnů.
+
+Přístavem se toulá\\*
+A lístek svůj žmoulá.\\*
+Protáhnul ten mejdan pár dní.\\*
+Náhle z novin zpráva,\\*
+Že ledovec jak kráva\\*
+Potopil ten slavný parník.
+
+Pán Ján zpitej zas jak Dá.\\*
+Slavný muž, jenž měl z pekla štěstí.\\*
+Vrátí se zpátky jen sám.\\*
+Odchází z Karpat bída.\\*
+On hodlá dál žít na scestí.
+
+\end{poem}
+
+\begin{poem}{To samo}{Jananas}
+
+\settowidth{\versewidth}{chemie, když je tu, pojď se mnou do kabinetu}
+
+Ta kopírka už byla rozbitá,\\*
+když jsem do ní lehal\\*
+Ta postel už hořela, \\*
+když jsem v ní kopíroval\\*
+
+Kaviár z lednice sám vysublimoval\\*
+Počítač se sám od sebe zase zaviroval
+
+To porno byl spam, já nic nestahoval\\*
+Klíče se ztratily a diář schoval\\*
+Ten požár bytu, asi špatnej drát\\*
+Já nic, přece, nebudu lhát
+
+Já ne, to samo\\*
+Ono se to samo\\*
+Já ne, to samo\\*
+Ono se to udělalo\\*
+Ne, to samo, ono se to samo, já ne
+
+Já to neukrad, já to našel\\*
+a taky mi to dali\\*
+Chtěl jsem to vrátit,\\*
+Jenže jsme se nepotkali
+
+Já to neztratil, fakt ne! \\*
+Ukradli mi tašku\\*
+A za tu flešku, kdes měl všecko,\\*
+koupim ti flašku
+
+Já to nezlomil, bylo to nalomený\\*
+Já to neroztrh, bylo to natržený\\*
+Já jen se bránil, já nechtěl se prát\\*
+Já nic, přece nebudu lhát
+
+Já ne, to samo\\*
+Ono se to samo\\*
+Já ne, to samo\\*
+Ono se to udělalo\\*
+Ne, to samo, ono se to samo, já ne
+
+Já nezloustnul, měl jsem zranění \\*
+a kila šla nahoru\\*
+Musel jsem jít učit, \\*
+i když byl jsem dobrej v oboru
+
+Chtěl jsem cestovat a odejít z domu,\\*
+ale neumím anglicky, nevedli mě k tomu\\*
+Za to, že jsem chudej, může tenhle stát \\*
+Já nic, přece nebudu lhát
+
+Víš, já jsem neměl nikdy štěstí\\*
+Nevím, proč zrovna já\\*
+Může za to moje dětství\\*
+Není to vina má
+
+Má žena, ta mi nerozumí,\\*
+trpím její vinou \\*
+Ale teď jsi tu ty a mezi námi\\*
+je chemie, nemám možnost jinou
+
+A teď samo moje tělo vstalo\\*
+a na tebe zareagovalo,\\*
+když sami teď spolu jsme tu,\\*
+pojď se mnou do kabinetu
+
+Stalo se to samo, já ne\\*
+Ono se to udělalo samo\\*
+Stalo se to samo, já ne,\\*
+to samo, to samo, to samo
+
+Chemie, když je tu, pojď se mnou do kabinetu\\*
+chemie, když je tu, pojď se mnou do kabinetu
+
+\end{poem}
 
 \begin{poem}{Tři čuníci}{Jaromír Nohavica}
 
@@ -2522,38 +2633,6 @@ Ref.
 
 \end{poem}
 
-\begin{poem}{Titanic}{Tři sestry}
-
-\settowidth{\versewidth}{Slavný muž, jenž měl z pekla štěstí}
-
-Z výšin Velkých Karpat\\*
-Přes moře na západ.\\*
-Bída v Americe má cíl.\\*
-Ráno maj už lístek.\\*
-Titanic je místem,\\*
-Kde teď budou týdnů pár žít.
-
-Jen Ján zpitej zas jak Dán.\\*
-Prošvihnul odjezd parníku snů.\\*
-Máma ta pláče že sám\\*
-Odsoudil se skrz pitku\\*
-Ke smutnému zítřku svých dnů.
-
-Přístavem se toulá\\*
-A lístek svůj žmoulá.\\*
-Protáhnul ten mejdan pár dní.\\*
-Náhle z novin zpráva,\\*
-Že ledovec jak kráva\\*
-Potopil ten slavný parník.
-
-Pán Ján zpitej zas jak Dá.\\*
-Slavný muž, jenž měl z pekla štěstí.\\*
-Vrátí se zpátky jen sám.\\*
-Odchází z Karpat bída.\\*
-On hodlá dál žít na scestí.
-
-\end{poem}
-
 \iffalse
 \begin{poem}{Udavač z Těšína}{Jaroslav Hutka}
 
@@ -2612,7 +2691,7 @@ bohatě co blíží se ke svému pádu
 \settowidth{\versewidth}{v němž jede parta, se kterou jsem chodil pít:}
 
 Já ti řeknu, proč jsem dneska divnej tak,\\*
-kdy' v dálce za tunelem začne houkat vlak,\\*
+když v dálce za tunelem začne houkat vlak,\\*
 proč nechávám svou ciaretu vyhasnout,\\*
 proč každou chvíli stojím jako solnej sloup.
 
@@ -2622,26 +2701,26 @@ a parta z vlaku, se kterou jsem chodil pít:\\*
 strojvůdce Mike, výhybkář Joe a brzdař Kid.
 
 Jednou, když jsme jeli z Friska v 05,\\*
-tahle trať nebejvala žádnej med,\\*
+tahle trať nebejvala nikdy žádnej med,\\*
 po banánový slupce sklouz a z vlaku slít\\*
-a pod kolama zůstal mladej Kid.
+a pod kolama zůstal mladej brzdař Kid.
 
-Za rok nato z Friska 05\\*
+Za rok nato zase z Friska 05\\*
 vyjel si Mike mašinfíra naposled.\\*
 Tam v zatáčce za tunelem při srážce\\*
 z budky vylít a zlomil si vaz o pražce.
 
 Pak jsem už zbyl jen já a Výhybka Joe,\\*
 ale neštěstí chodilo kolem nás dvou.\\*
-Jednou Výhybka Joe nevrátil se zpět,\\*
-ani on ani ten vlak v 05.
+Jednou Výhybka Joe už nevrátil se zpět,\\*
+ani on ani ten vlak z Friska v 05.
 
 Takže už víš, proč jsem teda bledej tak,\\*
 já slyším za tunelem houkat divnej vlak,\\*
 v němž jede parta, se kterou jsem chodil pít:\\*
 strojvůdce Mike, Výhybka Joe a brzdař Kid.
 
-Ten vlak se ke mně řítí tmou,\\*
+Ten vlak z Friska už se řítí tmou,\\*
 tak ahoj Kide, Miku, ahoj Joe...
 
 \end{poem}
