--- a/songbook.tex
+++ b/songbook.tex
@@ -76,6 +76,36 @@ Kajetán Pterodaktyl.
 % Start numbering pages with normal arabic numerals.
 % \mainmatter
 
+\begin{poem}{Tajemství Tepešváru}{Hurá do přírody}
+
+\settowidth{\versewidth}{vždyť čas se nachýlil, vždyť nejsou jedni z nás,}
+
+Občané tepeští, co je moc, to je moc,\\*
+občané tepeští, moc je moc;\\*
+strach náš se rozptýlil, tak pozvedněme hlas,\\*
+vždyť čas se nachýlil, vždyť nejsou jedni z nás,\\*
+co je moc, to je moc.
+
+Vyjděme do temnot, co je moc, to je moc,\\*
+vyjděme do temnot, moc je moc;\\*
+kde snovou život náš, a dokonce i smrt,\\*
+tak v sázku nic nedáš, jen v syžetu škrt,\\*
+co je moc, to je moc.
+
+Ten úsměv jedový, co je moc, to je moc,\\*
+ten úsměv jedový, moc je moc;\\*
+když přišli s nabídkou, když přišli s řešením,\\*
+když přešli s nadílkou, když přešli s hřešením,\\*
+co je noc, to je moc.
+
+Spaste své svědomí, co je moc, to je moc,\\*
+spaste své svědomí, moc je moc;\\*
+jen hrstka pěkných lží a křivé přísahy,\\*
+pohár se krví mží, končí mé výstrahy.\\*
+Zlost je zlost! Dost je dost!
+
+\end{poem}
+
 \begin{poem}{Hobit aneb Cesta tam a zase zpátky}{Hurá do přírody}
 
 \settowidth{\versewidth}{Měl zkázu nést a spálit vřes.}
