add lady in black

--- a/songbook.tex
+++ b/songbook.tex
@@ -3553,7 +3553,86 @@ He’ll be home at last
 Still I don’t believe in angels
 
 \end{poem}
+
 \fi
+
+\begin{poem}{Lady in Black}{Uriah Heep}
+
+\settowidth{\versewidth}{"Have faith and trust in peace", she said}
+
+She came to me one morning\\*
+One lonely Sunday morning\\*
+Her long hair flowing\\*
+In the midwinter wind.
+
+I know not how she found me\\*
+For in darkness I was walking\\*
+And destruction lay around me\\*
+From a fight I could not win
+
+Ref.:\\*
+Ah, ah-ah, ah-ah, ah-ah-ah\\*
+Ah, ah-ah-ah, ah-ah-ah
+
+She asked me name my foe then\\*
+I said the need within some men\\*
+To fight and kill their brothers\\*
+Without thought of love or God
+
+And I begged her, give me horses\\*
+To trample down my enemies\\*
+So eager was my passion\\*
+To devour this waste of life
+
+Ref.
+
+But she wouldn't think of battle that\\*
+Reduces men to animals\\*
+So easy to begin\\*
+And yet impossible to end
+
+For she's the mother of all men\\*
+Who counselled me so wisely then\\*
+I feared to walk alone again\\*
+And asked if she would stay
+
+Ref.
+
+Oh, lady, lend your hand outright\\*
+And let me rest here at your side\\*
+"Have faith and trust in peace", she said\\*
+And filled my heart with life
+
+There is no strength in numbers\\*
+Have no such misconception\\*
+But when you need me\\*
+Be assured, I won't be far away
+
+Ref.
+
+Thus, having spoke, she turned away\\*
+And though I found no words to say\\*
+I stood and watched until I saw\\*
+Her black coat disappear
+
+My labour is no easier\\*
+But now I know I'm not alone\\*
+I'll find new heart each time\\*
+I think upon that windy day
+
+And if one day she comes to you\\*
+Drink deeply from her words so wise\\*
+Take courage from her as your prize\\*
+And say hello from me
+
+Ref.
+
+Ref.
+
+Ref.
+
+\end{poem}
+
 \iffalse
 \begin{poem}{Leeds United}{Amanda Palmerová}
 
