fix minor issues

--- a/songbook.tex
+++ b/songbook.tex
@@ -549,7 +549,7 @@ jestli ty v mých představách už mizíš.
 
 Máš má ovečko dávno spát, dnes máme půlnoc\\*
 \tab temnou.\\*
-Ráno budou nám bláznů lát, že ráda snídáš se mnou.\\*
+Ráno budou nám bláznům lát, že ráda snídáš se mnou.\\*
 Proč měl bych jim lhát, že jsem tady sám,\\*
 když Tebe mám rád, když Tebe tu mám.
 
@@ -801,7 +801,7 @@ Ref.
 
 Tak Frankyho vám jednou našli, přestal žít,\\*
 jeho srdce spí, tiše smutně spí,\\*
-bůhví jak a za co tenhle smíšek konec měl,\\*
+bůhví jak, za co tenhle smíšek konec měl,\\*
 farář píseň pěl, umíráček zněl.
 
 Ref.
@@ -834,8 +834,8 @@ Nesu vám trochu ryb na svačinu.":/
 
 V kotlíku bublá čaj, kamna hřejí,\\*
 psi venku hlídají před zloději.\\*
-/:Smíchem se otřásá celé iglů,\\*
-neboť medvěd jim předvádí spoustu fíglů.:/
+/:Smíchem se otřásá celé íglů,\\*
+medvěd jim předvádí spoustu fíglů.:/
 
 Tak žijou vesele na severu,\\*
 srandu si dělají z teploměrů.\\*
@@ -1064,6 +1064,8 @@ Obzor než klesne níž, \\*
 je ráno a ty spíš.\\*
 Od vlků odraná, \\*
 hvězdáře Giordana.
+
+Opouštíš...
 \end{poem}
 
 \begin{poem}{Já viděl divoké koně}{Jaromír Nohavica}
@@ -1161,7 +1163,7 @@ jak říkali jsme hvězdám kdysi v mládí,\\*
 to na studený zemi\\*
 ještě uměli jsme milovat a spát.
 
-A dál, však to znáš,\\*
+A dál, však to víš,\\*
 světem protloukal ses, jak ten život pádí,\\*
 dneska písničky třeba vod Červánků\\*
 dojmou tě, jak vrátil bys' to rád.
@@ -1300,107 +1302,6 @@ nechte ho jít.
 
 \end{poem}
 \fi
-
-\begin{poem}{Kočka}{Pokáč}
-
-\settowidth{\versewidth}{Žít s ní je pro zdraví fakt zlý}
-
-Jednou mi drahá říká:\\*
-Miláčku, já chci kočku\\*
-Já na to, že chci spíš psa\\*
-A jeli jsme pro kočku
-
-V útulku v Měcholupech\\*
-Maj dobrej výběr, zdá se\\*
-Kočky jsou zcela zdarma\\*
-Jen očkování za patnáct set
-
-Po dlouhým vybírání\\*
-Diskuzích a dvou hádkách\\*
-Jedno z koťátek jemně sevře\\*
-Můj prst ve svých drápkách
-
-A volba byla jasná\\*
-Má drahá slzy suší\\*
-Co si však vezem domů\\*
-To ani jeden z nás netuší
-
-Ref.:\\*
-Mám doma kočku, mám ji rád\\*
-Je to skvělý kamarád\\*
-Jen od tý doby, co ji znám\\*
-Mám ruce nohy samej šrám\\*
-Dávno už se nemazlí\\*
-Žít s ní je pro zdraví fakt zlý\\*
-Každý den projdu terorem\\*
-Mám nejspíš kočku s errorem
-
-Prvních pár dnů soužití\\*
-Vše vypadá nevinně\\*
-Koťátko v náručí spí\\*
-A pak zkadí půlku kuchyně
-
-Prostě nic, co nečekáš\\*
-Když útulek zaručí\\*
-Že kočička se po pár týdnech\\*
-Na záchůdek naučí
-
-Jenže pár měsíců je pryč\\*
-Záchod zeje prázdnotou\\*
-Bytem čpí příšernej smrad\\*
-Za kočkou lítám s lopatou
-
-Když jí zkusím pomoct sám\\*
-Na záchod ji přemístit\\*
-Zvládne mi dlaně rozdrásat (AU)\\*
-A ještě potřísnit
-
-Ref.
-
-Za noc nejmíň pětkrát\\*
-Jí okno otevřít jdu\\*
-Pak v práci šéf se zeptá\\*
-Proč vždy tak ospalý přijdu
-
-Že občas hrdě nám dvoum\\*
-Donese zakouslou myš\\*
-Poznáš až ráno když se\\*
-S torzem myši v ústech vzbouzíš
-
-Tak jsme si dobrovolně\\*
-Pořídili katastrofu\\*
-Stálo nás to patnáct stovek\\*
-A jednu zbrusu novou sofu
-
-Kouše, škrábe, drásá\\*
-No prostě je to krása\\*
-Tváří se tak roztomile\\*
-Zvlášť, když se mi rejpe v žíle
-
-Mám doma kočku, mám ji rád\\*
-Je to skvělý kamarád\\*
-Jen od tý doby, co ji znám\\*
-Mám ruce nohy samej šrám\\*
-Dávno už se nemazlí\\*
-Žít s ní je pro zdraví fakt zlý\\*
-Každý den projdu terorem\\*
-Mám nejspíš kočku...
-
-Ráda dlouze sedá v okně\\*
-Anebo ve dveřích\\*
-Bůh ví, proč nejradši v zimě\\*
-Když venku padá sníh
-
-Když pak v bytě máme mínus dvacet\\*
-Tak nás zahřívá\\*
-Aspoň pocit, že v tu chvíli naši\\*
-krev neprolívá\\*
-OU!
-
-Ref.\\*
-MŇAU
-
-\end{poem}
 
 \begin{poem}{Kometa}{Jaromír Nohavica}
 
@@ -1708,6 +1609,107 @@ Ref.
 
 \end{poem}
 
+\begin{poem}{Mám doma kočku}{Pokáč}
+
+\settowidth{\versewidth}{Žít s ní je pro zdraví fakt zlý}
+
+Jednou mi drahá říká:\\*
+Miláčku, já chci kočku\\*
+Já na to, že chci spíš psa\\*
+A jeli jsme pro kočku
+
+V útulku v Měcholupech\\*
+Maj dobrej výběr, zdá se\\*
+Kočky jsou zcela zdarma\\*
+Jen očkování za patnáct set
+
+Po dlouhým vybírání\\*
+Diskuzích a dvou hádkách\\*
+Jedno z koťátek jemně sevře\\*
+Můj prst ve svých drápkách
+
+A volba byla jasná\\*
+Má drahá slzy suší\\*
+Co si však vezem domů\\*
+To ani jeden z nás netuší
+
+Ref.:\\*
+Mám doma kočku, mám ji rád\\*
+Je to skvělý kamarád\\*
+Jen od tý doby, co ji znám\\*
+Mám ruce nohy samej šrám\\*
+Dávno už se nemazlí\\*
+Žít s ní je pro zdraví fakt zlý\\*
+Každý den projdu terorem\\*
+Mám nejspíš kočku s errorem
+
+Prvních pár dnů soužití\\*
+Vše vypadá nevinně\\*
+Koťátko v náručí spí\\*
+A pak zkadí půlku kuchyně
+
+Prostě nic, co nečekáš\\*
+Když útulek zaručí\\*
+Že kočička se po pár týdnech\\*
+Na záchůdek naučí
+
+Jenže pár měsíců je pryč\\*
+Záchod zeje prázdnotou\\*
+Bytem čpí příšernej smrad\\*
+Za kočkou lítám s lopatou
+
+Když jí zkusím pomoct sám\\*
+Na záchod ji přemístit\\*
+Zvládne mi dlaně rozdrásat (AU)\\*
+A ještě potřísnit
+
+Ref.
+
+Za noc nejmíň pětkrát\\*
+Jí okno otevřít jdu\\*
+Pak v práci šéf se zeptá\\*
+Proč vždy tak ospalý přijdu
+
+Že občas hrdě nám dvoum\\*
+Donese zakouslou myš\\*
+Poznáš až ráno když se\\*
+S torzem myši v ústech vzbouzíš
+
+Tak jsme si dobrovolně\\*
+Pořídili katastrofu\\*
+Stálo nás to patnáct stovek\\*
+A jednu zbrusu novou sofu
+
+Kouše, škrábe, drásá\\*
+No prostě je to krása\\*
+Tváří se tak roztomile\\*
+Zvlášť, když se mi rejpe v žíle
+
+Mám doma kočku, mám ji rád\\*
+Je to skvělý kamarád\\*
+Jen od tý doby, co ji znám\\*
+Mám ruce nohy samej šrám\\*
+Dávno už se nemazlí\\*
+Žít s ní je pro zdraví fakt zlý\\*
+Každý den projdu terorem\\*
+Mám nejspíš kočku...
+
+Ráda dlouze sedá v okně\\*
+Anebo ve dveřích\\*
+Bůh ví, proč nejradši v zimě\\*
+Když venku padá sníh
+
+Když pak v bytě máme mínus dvacet\\*
+Tak nás zahřívá\\*
+Aspoň pocit, že v tu chvíli naši\\*
+krev neprolívá\\*
+OU!
+
+Ref.\\*
+MŇAU
+
+\end{poem}
+
 \begin{poem}{Mezi horami}{Čechomor}
 
 \settowidth{\versewidth}{hned na hrob padla a viac něvstala}
@@ -1894,18 +1896,6 @@ do bílé vody, vody,\\*
 Vyhasnul kotel,\\*
 a náhoda je,\\*
 štěstí od podkovy.
-
-Vysyp ten popel kamaráde,\\*
-do bílé vody, vody,\\*
-Vyhasnul kotel,\\*
-a náhoda je,\\*
-štěstí od podkovy,
-
-Vysyp ten popel kamaráde,\\*
-do bílé vody, vody,\\*
-Vyhasnul kotel,\\*
-a náhoda je,\\*
-štěstí od podkovy...
 
 \end{poem}
 \iffalse
@@ -2841,7 +2831,7 @@ tahle trať nebejvala nikdy žádnej med,\\*
 po banánový slupce sklouz a z vlaku slít\\*
 a pod kolama zůstal mladej brzdař Kid.
 
-Za rok nato zase z Friska 05\\*
+Za rok nato zase z Friska v 05\\*
 vyjel si Mike mašinfíra naposled.\\*
 Tam v zatáčce za tunelem při srážce\\*
 z budky vylít a zlomil si vaz o pražce.
@@ -2857,7 +2847,7 @@ v němž jede parta, se kterou jsem chodil pít:\\*
 strojvůdce Mike, Výhybka Joe a brzdař Kid.
 
 Ten vlak z Friska už se řítí tmou,\\*
-tak ahoj Kide, Miku, ahoj Joe...
+tak ahoj Kide, Miku, Joe...
 
 \end{poem}
 
